--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="utf-8">
     <title>DrEmixam</title>
+    <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
+
+    <script type="importmap">
+    {
+        "imports": {
+        "three": "https://unpkg.com/three@0.156.0/build/three.module.js",
+        "three/addons/": "https://unpkg.com/three@0.156.0/examples/jsm/"
+        }
+    }
+    </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <style>
@@ -31,9 +41,11 @@
             #col1 {
                 width: 40%;
             }
+
             #col2 {
                 width: 60%;
             }
+
             canvas {
                 position: fixed;
             }
@@ -103,7 +115,6 @@
             filter: drop-shadow(5px 5px 5px #343744);
             transition: filter 0.1s ease-in-out;
         }
-
     </style>
 </head>
 
@@ -117,7 +128,8 @@
             <div class="content">
                 <h1><img src="logo.png">DrEmixam</h1>
                 <p>
-                    Bienvenue sur le site web de DrEmixam, célèbre streamer & hacker mondialement connu dans le quartier, sale islamogauchiste et personnalité de
+                    Bienvenue sur le site web de DrEmixam, célèbre streamer & hacker mondialement connu dans le
+                    quartier, sale islamogauchiste et personnalité de
                     l'année 2006 du Time.
                 </p>
                 <p>
