Suppression du calendrier, ajout du lien threads

--- a/index.html
+++ b/index.html
@@ -159,9 +159,6 @@
                 </p>
                 <ul class="list-group">
                     
-                    <li class="list-group-item">
-                        <a target="_blank" href="https://calendrier.dremixam.com/">Achetez le calendrier de Léon !</a>
-                    </li>
 
                     <li class="list-group-item">
                         <a target="_blank" href="https://twitch.dremixam.com/"><i class="bi bi-twitch"></i> Twitch</a>
@@ -173,6 +170,9 @@
                     <li class="list-group-item">
                         <a target="_blank" href="https://discord.dremixam.com/"><i class="bi bi-discord"></i>
                             Discord</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a target="_blank" href="https://www.threads.net/@dremixam"><i class="bi bi-threads"></i> Threads</a>
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" rel="me" href="https://lou.lt/@dremixam"><i class="bi bi-mastodon"></i>
