--- a/index.html
+++ b/index.html
@@ -164,31 +164,34 @@
                         <a target="_blank" href="https://twitch.dremixam.com/"><i class="bi bi-twitch"></i> Twitch</a>
                     </li>
                     <li class="list-group-item">
-                        <a target="_blank" href="https://ko-fi.com/dremixam"><i class="bi bi-coin"></i> Me soutenir sur
-                            Ko-fi</a>
+                        <a target="_blank" href="https://www.tiktok.com/@dremixamtwitch?lang=fr"><i
+                                class="bi bi-tiktok"></i> Tik-Tok</a>
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" href="https://discord.dremixam.com/"><i class="bi bi-discord"></i>
                             Discord</a>
                     </li>
                     <li class="list-group-item">
-                        <a target="_blank" href="https://www.threads.net/@dremixam"><i class="bi bi-threads"></i> Threads</a>
+                        <a target="_blank" href="https://ko-fi.com/dremixam"><i class="bi bi-coin"></i> Me soutenir sur
+                            Ko-fi</a>
                     </li>
                     <li class="list-group-item">
-                        <a target="_blank" rel="me" href="https://lou.lt/@dremixam"><i class="bi bi-mastodon"></i>
-                            Mastodon</a>
+                        <a target="_blank" href="https://twitter.com/dremixam"><i class="bi bi-twitter"></i> X/Twitter</a>
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" href="https://www.instagram.com/dremixam/"><i class="bi bi-instagram"></i>
                             Instagram</a>
                     </li>
                     <li class="list-group-item">
-                        <a target="_blank" href="https://www.youtube.com/@DrEmixamTwitch"><i class="bi bi-youtube"></i>
-                            Youtube</a>
+                        <a target="_blank" rel="me" href="https://lou.lt/@dremixam"><i class="bi bi-mastodon"></i>
+                            Mastodon</a>
                     </li>
                     <li class="list-group-item">
-                        <a target="_blank" href="https://www.tiktok.com/@dremixamtwitch?lang=fr"><i
-                                class="bi bi-tiktok"></i> Tik-Tok</a>
+                        <a target="_blank" href="https://www.threads.net/@dremixam"><i class="bi bi-threads"></i> Threads</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a target="_blank" href="https://www.youtube.com/@DrEmixamTwitch"><i class="bi bi-youtube"></i>
+                            Youtube</a>
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" href="https://onlyfans.com/leonlerobot">
