--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
                         <a target="_blank" href="https://twitch.dremixam.com/"><i class="bi bi-twitch"></i> Twitch</a>
                     </li>
                     <li class="list-group-item">
+                        <a target="_blank" href="https://shop.dremixam.com/"><i class="bi bi-shop"></i> La boutique</a>
+                    </li>
+                    <li class="list-group-item">
                         <a target="_blank" href="https://www.tiktok.com/@dremixamtwitch?lang=fr"><i
                                 class="bi bi-tiktok"></i> Tik-Tok</a>
                     </li>
