--- a/index.html
+++ b/index.html
@@ -158,13 +158,15 @@
                     Mes créations n'engagent que ceux qui les croient.
                 </p>
                 <ul class="list-group">
-                    
-
                     <li class="list-group-item">
                         <a target="_blank" href="https://twitch.dremixam.com/"><i class="bi bi-twitch"></i> Twitch</a>
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" href="https://shop.dremixam.com/"><i class="bi bi-shop"></i> La boutique</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a target="_blank" href="https://bsky.app/profile/dremixam.com"><i
+                                class="bi bi-bluesky"></i> Bluesky</a>
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" href="https://www.tiktok.com/@dremixamtwitch?lang=fr"><i
@@ -179,18 +181,12 @@
                             Ko-fi</a>
                     </li>
                     <li class="list-group-item">
-                        <a target="_blank" href="https://twitter.com/dremixam"><i class="bi bi-twitter"></i> X/Twitter</a>
-                    </li>
-                    <li class="list-group-item">
                         <a target="_blank" href="https://www.instagram.com/dremixam/"><i class="bi bi-instagram"></i>
                             Instagram</a>
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" rel="me" href="https://lou.lt/@dremixam"><i class="bi bi-mastodon"></i>
                             Mastodon</a>
-                    </li>
-                    <li class="list-group-item">
-                        <a target="_blank" href="https://www.threads.net/@dremixam"><i class="bi bi-threads"></i> Threads</a>
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" href="https://www.youtube.com/@DrEmixamTwitch"><i class="bi bi-youtube"></i>
