--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
                         <a target="_blank" href="https://shop.dremixam.com/"><i class="bi bi-shop"></i> La boutique</a>
                     </li>
                     <li class="list-group-item">
+                        <a target="_blank" href="https://bsky.app/profile/dremixam.com">
+                            <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                                style="height: 1.3em; vertical-align: middle;">
+                                <path fill="white" d="M17,12.28l-.42,0ZM12,9.46a26.84,26.84,0,0,0-6.8-8C2.57-.39,1.56-.07.9.23S0,1.75,0,2.43A62.64,62.64,0,0,0,.62,8.91c.82,2.74,3.72,3.67,6.39,3.37l.41-.06L7,12.28c-3.91.58-7.39,2-2.83,7.08,5,5.19,6.87-1.12,7.82-4.31.95,3.19,2.05,9.27,7.73,4.31C24,15.05,20.9,12.86,17,12.28l-.42-.06.42.06c2.67.29,5.57-.63,6.39-3.37A62.38,62.38,0,0,0,24,2.43c0-.69-.14-1.86-.9-2.2s-1.67-.62-4.3,1.24A26.84,26.84,0,0,0,12,9.46Z"/>
+                            </svg>
+                            Bluesky</a>
+                    </li>
+                    <li class="list-group-item">
                         <a target="_blank" href="https://bsky.app/profile/dremixam.com"><i
                                 class="bi bi-bluesky"></i> Bluesky</a>
                     </li>
