--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <h2>Contact</h2>
                 <ul class="list-group double-ul">
                     <li class="list-group-item">
-                        <a target="_blank" href="mailto:DrEmixam <contact@dremixam.com>"><i class="bi bi-envelope-fill"></i> contact&#x200B;@dremixam.com</a>
+                        <a target="_blank" href="mailto:?to=DrEmixam%20%3ccontact@dremixam.com%3e"><i class="bi bi-envelope-fill"></i> contact&#x200B;@dremixam.com</a>
                     </li>
                     <li class="list-group-item">
                         <a><i class="bi bi-discord"></i> DrEmixam</a>
