--- a/index.html
+++ b/index.html
@@ -185,16 +185,8 @@
                             Ko-fi</a>
                     </li>
                     <li class="list-group-item">
-                        <a target="_blank" href="https://www.instagram.com/dremixam/"><i class="bi bi-instagram"></i>
-                            Instagram</a>
-                    </li>
-                    <li class="list-group-item">
-                        <a target="_blank" rel="me" href="https://lou.lt/@dremixam"><i class="bi bi-mastodon"></i>
-                            Mastodon</a>
-                    </li>
-                    <li class="list-group-item">
                         <a target="_blank" href="https://www.youtube.com/@DrEmixamTwitch"><i class="bi bi-youtube"></i>
-                            Youtube</a>
+                            Youtube (replays et clips)</a>
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" href="https://onlyfans.com/leonlerobot">
