--- a/index.html
+++ b/index.html
@@ -18,17 +18,36 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <style>
+        /* Réinitialisation de base */
         html,
         body {
             margin: 0;
             height: 100%;
             width: 100%;
-            background-color: #585c72;
             color: white;
             font-family: 'Roboto', sans-serif;
             overflow-x: hidden;
+            background: linear-gradient(120deg, #2c2f3a, #5a3d7f, #3a4d6c);
+            background-size: 300% 300%;
+            background-attachment: fixed;
+            animation: gradientAnimation 15s ease infinite;
         }
 
+        @keyframes gradientAnimation {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        /* Mise en page principale */
         .box {
             display: flex;
             flex-wrap: wrap;
@@ -78,42 +97,98 @@
             z-index: 100;
         }
 
+        /* Titre principal avec effet lumineux */
         h1 {
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 1em;
-            filter: drop-shadow(2px 2px 5px #343744);
-            font-size: 2.5em;
+            filter: drop-shadow(2px 2px 5px #1c1e22);
+            font-size: 3.5em;
+            /* Augmenté pour plus d'impact */
+            margin-bottom: 1em;
+            color: #e0e6f0;
+            /* Blanc légèrement bleuté */
+            text-shadow: 0 0 10px #6a3d7f, 0 0 20px #3a4d6c;
+            animation: glow 2s infinite alternate;
+        }
+
+        h1 video {
+            max-height: 3em;
+            /* Taille du logo */
+            border-radius: 50%;
+            /* Ajout d'un effet arrondi */
+            box-shadow: 0 0 15px rgba(90, 61, 127, 0.5);
+            /* Halo lumineux autour du logo */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            /* Augmente la luminosité et le contraste */
+        }
+
+        h1 video:hover {
+            transform: scale(1.05);
+            /* Agrandissement subtil au survol */
+            box-shadow: 0 0 25px rgba(90, 61, 127, 0.8);
+            /* Halo plus intense au survol */
+        }
+
+        @keyframes glow {
+            0% {
+                text-shadow: 0 0 10px #6a3d7f, 0 0 20px #3a4d6c;
+            }
+
+            100% {
+                text-shadow: 0 0 20px #6a3d7f, 0 0 30px #3a4d6c;
+            }
+        }
+
+        /* Titres secondaires */
+        h2 {
+            font-size: 2em;
+            color: #e0e6f0;
+            /* Blanc légèrement bleuté */
+            margin: 1em 0;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         p {
             margin: 0 0 1.5em;
         }
 
-        h1>img {
-            max-height: 1.5em;
-        }
-
+        /* Boutons et liens avec effets de survol */
         .list-group-item {
             margin: 1em;
         }
 
         .list-group-item a {
             display: block;
-            background-color: #343744;
-            border-radius: 10px;
+            background-color: #2c2f3a;
+            color: #ffffff;
+            border: 2px solid #5a3d7f;
+            border-radius: 12px;
             line-height: 3em;
-            filter: drop-shadow(2px 2px 5px #343744);
-            color: white;
-            font-weight: normal;
             text-decoration: none;
+            font-weight: bold;
+            transition: all 0.3s ease;
         }
 
         .list-group-item a:hover {
-            background-color: #3a3e4c;
-            filter: drop-shadow(5px 5px 5px #343744);
-            transition: filter 0.1s ease-in-out;
+            background-color: #79608e;
+            /* Bleu plus clair pour le survol */
+            color: #e0e6f0;
+            /* Blanc légèrement bleuté */
+            box-shadow: 0 0 15px #5a3d7f;
+            transform: scale(1.1);
+        }
+
+        /* Icônes avec effet de survol */
+        i {
+            transition: transform 0.3s ease, color 0.3s ease;
+        }
+
+        i:hover {
+            transform: rotate(15deg) scale(1.2);
+            color: #5a3d7f;
         }
 
         i#audioToggle {
@@ -129,6 +204,7 @@
             color: darkgray;
         }
 
+        /* Double liste */
         .double-ul {
             display: flex;
             align-items: stretch;
@@ -137,6 +213,39 @@
 
         .double-ul li {
             flex: 1;
+        }
+
+        /* Effet de parallaxe pour la colonne gauche */
+        #col1 {
+            background: url('textures/workshop.hdr') no-repeat center center fixed;
+            background-size: cover;
+            filter: brightness(0.8);
+            transform: translateZ(0);
+            perspective: 1px;
+        }
+
+        /* Animation pour le titre */
+        h1 {
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Amélioration des sections */
+        .content h2 {
+            color: #e0e6f0;
+            /* Blanc légèrement bleuté */
+            margin-bottom: 1em;
         }
     </style>
 </head>
@@ -148,7 +257,11 @@
         <div id="col2">
 
             <div class="content">
-                <h1><img src="logo.png">DrEmixam</h1>
+                <h1><video autoplay muted loop playsinline
+                        style="max-height: 3em; border-radius: 50%; box-shadow: 0 0 15px rgba(90, 61, 127, 0.5); transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                        <source src="logo.webm" type="video/webm">
+                        <img src="logo.jpg">
+                    </video> DrEmixam</h1>
                 <p>
                     Bienvenue sur le site web de DrEmixam, célèbre streamer & hacker mondialement connu dans le
                     quartier, sale islamogauchiste et personnalité de
@@ -168,7 +281,8 @@
                         <a target="_blank" href="https://bsky.app/profile/dremixam.com">
                             <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                                 style="height: 1.3em; vertical-align: middle;">
-                                <path fill="white" d="M17,12.28l-.42,0ZM12,9.46a26.84,26.84,0,0,0-6.8-8C2.57-.39,1.56-.07.9.23S0,1.75,0,2.43A62.64,62.64,0,0,0,.62,8.91c.82,2.74,3.72,3.67,6.39,3.37l.41-.06L7,12.28c-3.91.58-7.39,2-2.83,7.08,5,5.19,6.87-1.12,7.82-4.31.95,3.19,2.05,9.27,7.73,4.31C24,15.05,20.9,12.86,17,12.28l-.42-.06.42.06c2.67.29,5.57-.63,6.39-3.37A62.38,62.38,0,0,0,24,2.43c0-.69-.14-1.86-.9-2.2s-1.67-.62-4.3,1.24A26.84,26.84,0,0,0,12,9.46Z"/>
+                                <path fill="white"
+                                    d="M17,12.28l-.42,0ZM12,9.46a26.84,26.84,0,0,0-6.8-8C2.57-.39,1.56-.07.9.23S0,1.75,0,2.43A62.64,62.64,0,0,0,.62,8.91c.82,2.74,3.72,3.67,6.39,3.37l.41-.06L7,12.28c-3.91.58-7.39,2-2.83,7.08,5,5.19,6.87-1.12,7.82-4.31.95,3.19,2.05,9.27,7.73,4.31C24,15.05,20.9,12.86,17,12.28l-.42-.06.42.06c2.67.29,5.57-.63,6.39-3.37A62.38,62.38,0,0,0,24,2.43c0-.69-.14-1.86-.9-2.2s-1.67-.62-4.3,1.24A26.84,26.84,0,0,0,12,9.46Z" />
                             </svg>
                             Bluesky</a>
                     </li>
@@ -199,17 +313,18 @@
                     </li>
                 </ul>
 
-                <h2>Projets</h2>
+                <!--h2>Projets</h2>
                 <ul class="list-group">
                     <li class="list-group-item">
                         <a target="_blank" href="https://bigzbeul.com"><i class="bi bi-box"></i> Le Bigzbeul</a>
                     </li>
-                </ul>
+                </ul-->
 
                 <h2>Contact</h2>
                 <ul class="list-group double-ul">
                     <li class="list-group-item">
-                        <a target="_blank" href="mailto:?to=DrEmixam%20%3ccontact@dremixam.com%3e"><i class="bi bi-envelope-fill"></i> contact&#x200B;@dremixam.com</a>
+                        <a target="_blank" href="mailto:?to=DrEmixam%20%3ccontact@dremixam.com%3e"><i
+                                class="bi bi-envelope-fill"></i> contact&#x200B;@dremixam.com</a>
                     </li>
                     <li class="list-group-item">
                         <a><i class="bi bi-discord"></i> DrEmixam</a>
