Correction de l'affichage sur mobile

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-wrap: wrap;
+            /* Permet au contenu de revenir à la ligne */
             gap: 1em;
             filter: drop-shadow(2px 2px 5px #1c1e22);
             font-size: 3.5em;
@@ -111,6 +113,8 @@
             /* Blanc légèrement bleuté */
             text-shadow: 0 0 10px #6a3d7f, 0 0 20px #3a4d6c;
             animation: glow 2s infinite alternate;
+            text-align: center;
+            /* Centre le texte sur plusieurs lignes */
         }
 
         h1 video {
