Ajout des interactions

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
         i:hover {
             transform: rotate(15deg) scale(1.2);
-            color: #5a3d7f;
+            color: #79608e;
         }
 
         i#audioToggle {
