Mise à jour des projets

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             color: #e0e6f0;
             /* Blanc légèrement bleuté */
             margin: 1em 0;
-            text-transform: uppercase;
+            font-variant: small-caps;
             letter-spacing: 1px;
         }
 
@@ -285,7 +285,7 @@
                     </video> DrEmixam</h1>
                 <p>
                     Bienvenue sur le site web de DrEmixam, célèbre streamer & hacker mondialement connu dans le
-                    quartier, sale islamogauchiste et personnalité de l'année 2006 du Time.
+                    quartier, islamogauchiste et personnalité de l'année 2006 du Time.
                 </p>
                 <p>
                     Mes créations n'engagent que ceux qui les croient.
@@ -333,12 +333,15 @@
                     </li>
                 </ul>
 
-                <!--h2>Projets</h2>
-                <ul class="list-group">
+                <h2>Projets</h2>
+                <ul class="list-group double-ul">
                     <li class="list-group-item">
                         <a target="_blank" href="https://bigzbeul.com"><i class="bi bi-box"></i> Le Bigzbeul</a>
                     </li>
-                </ul-->
+                    <li class="list-group-item">
+                        <a target="_blank" href="https://liberty-tree.net"><i class="bi bi-tree"></i> Le Liberty-Tree</a>
+                    </li>
+                </ul>
 
                 <h2>Contact</h2>
                 <ul class="list-group double-ul">
