--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
     }
     </script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <style>
         /* Réinitialisation de base */
@@ -341,7 +341,15 @@
                     <li class="list-group-item">
                         <a target="_blank" href="https://liberty-tree.net"><i class="bi bi-tree"></i> Le Liberty-Tree</a>
                     </li>
+                    <li class="list-group-item">
+                        <a target="_blank" href="https://github.com/dremixam/RAGEPhotoManager"><i class="bi bi-camera"></i> RAGE Photo Manager</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a target="_blank" href="https://modrinth.com/mod/cobblemon-pasture-loot"><i class="bi bi-box"></i> Cobblemon Pasture Loot</a>
+                    </li>
                 </ul>
+
+                
 
                 <h2>Contact</h2>
                 <ul class="list-group double-ul">
