Ajout du lien mods minecraft

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <a target="_blank" href="https://github.com/dremixam/RAGEPhotoManager"><i class="bi bi-camera"></i> RAGE Photo Manager</a>
                     </li>
                     <li class="list-group-item">
-                        <a target="_blank" href="https://modrinth.com/mod/cobblemon-pasture-loot"><i class="bi bi-box"></i> Cobblemon Pasture Loot</a>
+                        <a target="_blank" href="https://modrinth.com/user/DrEmixam"><i class="bi bi-box"></i> Mods Minecraft</a>
                     </li>
                 </ul>
 
