--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                         <a target="_blank" href="https://modrinth.com/user/DrEmixam"><i class="bi bi-box"></i> Mods Minecraft</a>
                     </li>
                     <li class="list-group-item">
-                        <a target="_blank" href="/files/calendrier-doigt-dans-le-cul.pdf"><i class="bi bi-calendar-date"></i> Le calendrier de Léon</a>
+                        <a target="_blank" href="/files/calendrier-doigt-dans-le-cul.pdf"><i class="bi bi-calendar-date"></i> Le calendrier de Léon (2024)</a>
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" href="https://liberty-tree.net"><i class="bi bi-tree"></i> Le Liberty-Tree</a>
