Add Animal Crossing Voice link to project list
Added a new list item linking to the ACVoice GitHub repository in the project section of index.html.

--- a/index.html
+++ b/index.html
@@ -359,6 +359,9 @@
                     <li class="list-group-item">
                         <a target="_blank" href="https://github.com/dremixam/RAGEPhotoManager"><i class="bi bi-camera"></i> RAGE Photo Manager</a>
                     </li>
+                    <li class="list-group-item">
+                        <a target="_blank" href="https://github.com/dremixam/ACVoice"><i class="bi bi-line"></i> Animal Crossing Voice</a>
+                    </li>
                 </ul>
 
                 
