--- a/index.html
+++ b/index.html
@@ -348,6 +348,9 @@
                 <h2>Projets</h2>
                 <ul class="list-group double-ul">
                     <li class="list-group-item">
+                        <a target="_blank" href="https://purplesky.dremixam.com/"><i class="bi bi-broadcast"></i> PurpleSky</a>
+                    </li>
+                    <li class="list-group-item">
                         <a target="_blank" href="https://modrinth.com/user/DrEmixam"><i class="bi bi-box"></i> Mods Minecraft</a>
                     </li>
                     <li class="list-group-item">
@@ -361,6 +364,9 @@
                     </li>
                     <li class="list-group-item">
                         <a target="_blank" href="https://github.com/dremixam/ACVoice"><i class="bi bi-line"></i> Animal Crossing Voice</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a target="_blank" href="/files/leon.stl"><i class="bi bi-file-earmark-arrow-down"></i> Modèle 3d de Léon pour impression 3D</a>
                     </li>
                 </ul>
 
