--- a/index.html
+++ b/index.html
@@ -281,6 +281,8 @@
             margin-bottom: 1em;
         }
     </style>
+
+    <script defer src="https://stats.dremixam.com/script.js" data-website-id="8cb56c5c-a278-43b0-9b40-8f3cdac4d109"></script>
 </head>
 
 <body>
